plugins {
    id 'application'
    id 'java'
}

group = 'com.interlis'
version = '0.1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
    maven {
        url = uri('https://jars.interlis.ch/')
    }
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.17.1'
    implementation 'ch.interlis:iox-ili:1.24.1'
    implementation 'ch.interlis:ili2c-core:5.6.6'
    implementation 'ch.interlis:ili2c-tool:5.6.6'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'org.assertj:assertj-core:3.25.3'
}

application {
    mainClass = 'com.interlis.transform.app.App'
}

run {
    args = [
            "src/main/resources/mappings/dmav_to_dm01.yaml",
            "/Users/stefan/Downloads/Testdaten/split/DMAV_Grundstuecke_V1_0.449.xtf",
            "./Testdaten.itf",
            //"DMAVTYM_Alles_V1_0", 
            "DMAV_Grundstuecke_V1_0",
            "DM01AVCH24LV95D"
    ]
}

sourceSets {
    integrationTest {
        java.srcDir 'src/integrationTest/java'
        resources.setSrcDirs(['src/integrationTest/resources'])
        compileClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
        runtimeClasspath += output + compileClasspath
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
}

tasks.register('integrationTest', Test) {
    description = 'Runs integration tests.'
    group = 'verification'
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    useJUnitPlatform()
}

tasks.named('check') {
    dependsOn tasks.named('integrationTest')
}
